Fix team name overflowing in sidebar #1596

--- a/www/teams/app-team.less
+++ b/www/teams/app-team.less
@@ -96,7 +96,7 @@
             }
         }
         .cp-team-cat-header {
-            justify-content: center;
+            justify-content: left;
             background-color: transparent !important;
             box-shadow: none !important;
             .avatar_main(30px);
@@ -106,6 +106,7 @@
             }
             media-tag, .cp-avatar-default {
                 margin-right: 3px;
+                flex-shrink: 0;
             }
             media-tag {
                 order: -1;
@@ -113,7 +114,12 @@
             cursor: default !important;
             font-size: 18px;
             span.cp-sidebarlayout-category-name {
+                max-width: 12rem;
                 padding-left: 5px;
+                white-space: nowrap;
+                overflow: hidden;
+                text-overflow: ellipsis;
+                min-width: 0;
             }
         }
         .cp-team-cat-chat {
